create a base for game

--- a/index.html
+++ b/index.html
@@ -3,5 +3,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
+        <link rel="stylesheet" href="style_and_js/style.css">
+        <title>Space Shooter</title>
     </head>
+    <body>
+        <div id='main-play_area'>
+            <div id="player-controlled-shooter">
+                
+            </div>
+        </div>
+        <script type="text/javascript" src="style_and_js/index.js"></script>
+    </body>
+</html>
+
