add buttons Up and Down

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
         <title>Space Shooter</title>
     </head>
     <body>
-        <div id='main-play_area'>
-            <div id="player-controlled-shooter">
-                
+        <div id='mainPlayArea'>
+            <img id="player-controlled-shooter" src="arts/spaceship.png">
+            <h4 style="color: white;" id="instructions">Управляй стрелками на клавиатуре, потому что у автора нет мышки)</h4>
+            <div id="startButton">
+                <h1 style="color: white;">START</h1>
             </div>
-        </div>
+        <div>
+        <div id="score">
+                <h2>Score: <span>0</span></h2>
+          </div>
         <script type="text/javascript" src="style_and_js/index.js"></script>
     </body>
 </html>
-
